Add hypridle and hyprlock
Signed-off-by: Jeff Horn <outforaride@gmail.com>

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,6 +49,8 @@ exec-once = hyprpaper
 exec-once = waybar
 # exec-once = nm-applet
 exec-once = hyprctl setcursor Qogir 24
+exec-once = systemctl --user start plasma-polkit-agent
+exec-once = hypridle
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -167,7 +169,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
@@ -194,6 +196,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = SUPER_SHIFT, l, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
