--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -7,7 +7,7 @@ TERM = "xterm-256color"
 
 [window]
 padding = {x = 3, y = 3}
-#opacity = 0.9
+opacity = 0.9
 
 [font]
 normal = {family = "JetBrainsMono Nerd Font", style = "Regular"}
