--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -25,7 +25,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=,3840x2160@50, 0x0, 2
+monitor=eDP-1,preferred, 0x0, 2
+monitor=HDMI-A-1,preferred, auto-right, 2
 
 ###################
 ### MY PROGRAMS ###
@@ -62,6 +63,7 @@ exec-once = hypridle
 #env = HYPRCURSOR_SIZE,24
 env = GTK_THEME,Qogir-Dark
 env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORM,wayland
 
 #####################
 ### LOOK AND FEEL ###
@@ -86,7 +88,7 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    layout = master
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -193,7 +195,7 @@ bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, F, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = SUPER_SHIFT, l, exec, hyprlock
