--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -264,3 +264,4 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+# windowrule = title, ^(firefox|Firefox)$
