--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/wallpapers/0076.jpg
-wallpaper =  ,~/.config/wallpapers/0076.jpg
+preload = ~/.config/wallpapers/Study-table.png
+wallpaper =  ,~/.config/wallpapers/Study-table.png
