--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = [
-"~/.config/alacritty/vscode.toml",
-]
 
 [env]
 TERM = "xterm-256color"
@@ -18,3 +15,8 @@ size = 12
 
 [scrolling]
 history = 50000
+
+[general]
+import = [
+"~/.config/alacritty/vscode.toml",
+]
