--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,10 +1,10 @@
 background {
     monitor =
-    # path = /home/me/someImage.png   # supports png, jpg, webp (no animations, though)
-    color = rgba(25, 20, 20, 1.0)
+    path = ~/.config/wallpapers/marine-landscape-cartoon-sunset.jpg # supports png, jpg, webp (no animations, though)
+    # color = rgba(25, 20, 20, 1.0)
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
-    blur_passes = 0 # 0 disables blurring
+    blur_passes = 3 # 0 disables blurring
     blur_size = 7
     noise = 0.0117
     contrast = 0.8916
@@ -15,7 +15,7 @@ background {
 
 input-field {
     monitor =
-    size = 200, 50
+    size = 400, 50
     outline_thickness = 3
     dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.15 # Scale of dots' absolute size, -1.0 - 1.0
@@ -27,7 +27,7 @@ input-field {
     inner_color = rgb(200, 200, 200)
     font_color = rgb(10, 10, 10)
     font_family = Fira Sans # Font used for placeholder_text, fail_text and dots_text_format.
-    fade_on_empty = true
+    fade_on_empty = false
     fade_timeout = 1000 # Milliseconds before fade_on_empty is triggered.
     placeholder_text = <i>Input Password...</i> # Text rendered in the input box when it's empty.
     hide_input = false
