--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/wallpapers/Study-table.png
-wallpaper =  ,~/.config/wallpapers/Study-table.png
+preload = ~/.config/wallpapers/marine-landscape-cartoon-sunset.jpg
+wallpaper =  ,~/.config/wallpapers/marine-landscape-cartoon-sunset.jpg
