--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -8,10 +8,10 @@
   ],
   "modules-right": [
     "network",
+    "pulseaudio",
+    "idle_inhibitor",
     "cpu",
     "memory",
-    "idle_inhibitor",
-    "pulseaudio",
     "battery",
     "clock"],
   "clock": {
@@ -29,7 +29,7 @@
     "format-charging": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
     "format-plugged": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
     "format-alt": "<span size='13000' foreground='#B1E3AD'>{icon} </span> {time}",
-    "format-full": "<span size='13000' foreground='#B1E3AD'> </span>{capacity}%",
+    "format-full": "<span size='13000' foreground='#89b4fa'> </span>{capacity}%",
     "format-icons": ["", "", "", "", ""],
     "tooltip-format": "{time}"
   },
