Update waybar and 2k monitor
Signed-off-by: Jeff Horn <outforaride@gmail.com>

--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -15,7 +15,7 @@
     "battery",
     "clock"],
   "clock": {
-    "format": "<span foreground='#f9e2af'>   </span>{:%a %d %H:%M}",
+    "format": "<span foreground='#f9e2af'>   </span>{:%a %b %d %H:%M}",
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
   },
   "battery": {
@@ -34,11 +34,11 @@
     "tooltip-format": "{time}"
   },
   "network": {
-    "format-wifi": "<span size='13000' foreground='#f5e0dc'>  </span>{essid}",
+    "format-wifi": "<span size='13000' foreground='#f5e0dc'> </span>",
     "format-ethernet": "<span size='13000' foreground='#f5e0dc'>󰤭  </span> Disconnected",
     "format-linked": "{ifname} (No IP) ",
     "format-disconnected": "<span size='13000' foreground='#f5e0dc'>  </span>Disconnected",
-    "tooltip-format-wifi": "Signal Strenght: {signalStrength}%"
+    "tooltip-format-wifi": "{essid} ({signalStrength}%) {ipaddr}"
   },
   "pulseaudio": {
     "format": "{icon}  {volume}%",
@@ -53,7 +53,7 @@
     "format": "{icon}",
     "format-icons": {
         "activated": "",
-        "deactivated": ""
+        "deactivated": "",
     }
   },
   "hyprland/window": {
