--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -26,7 +26,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
 monitor=eDP-1,preferred, 0x0, 2
-monitor=HDMI-A-1,preferred, auto-right, 2
+monitor=HDMI-A-1,preferred, auto-right, 1.25
 
 ###################
 ### MY PROGRAMS ###
@@ -74,7 +74,7 @@ env = QT_QPA_PLATFORM,wayland
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -83,7 +83,7 @@ general {
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false 
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
